[gd_scene load_steps=4 format=2]

[ext_resource path="res://PhaseBuild/Root/Builder.gd" type="Script" id=1]
[ext_resource path="res://PhaseBuild/Root/InputHandler.gd" type="Script" id=2]
[ext_resource path="res://PhaseBuild/BuildMenu/BuildMenu.tscn" type="PackedScene" id=3]

[node name="Root" type="Node"]

[node name="Builder" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="InputHandler" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="UIRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildMenu" parent="UIRoot" instance=ExtResource( 3 )]
anchor_left = 1.0
margin_left = -160.0
margin_right = 20.0
grow_horizontal = 0
[connection signal="place_trap" from="InputHandler" to="Builder" method="_on_InputHandler_place_trap"]
[connection signal="select_next_trap" from="InputHandler" to="Builder" method="_on_InputHandler_select_next_trap"]
[connection signal="select_prev_trap" from="InputHandler" to="Builder" method="_on_InputHandler_select_prev_trap"]
[connection signal="select_trap" from="InputHandler" to="Builder" method="_on_InputHandler_select_trap"]
